# anime_unix

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml
src/: macros.rs  main.rs  saves.rs  scraper.rs
